2005-02-21  Nathaniel Smith  <njs@codesourcery.com>

	* file_io.cc (get_homedir): Add more comments and logging to Win32
	version.  Also, only check HOME under Cygwin/MinGW.

2005-02-21  Derek Scherger  <derek@echologic.com>

	* Makefile.am: merge fixup
	
2005-02-21  Derek Scherger  <derek@echologic.com>

	* Makefile.am: add fsck.{cc,hh}
	* commands.cc(check_db): move to ...
	* fsck.{cc,hh}: here and do lots more checking
	* database.{cc,hh}(get_ids): new method
	(get_file_ids,get_manifest_ids,get_revision_ids): more new methods
	* tests/t_fsck.at: new test
	* testsuite.at: call it
	
2005-02-21  Nathaniel Smith  <njs@codesourcery.com>

	* commands.cc (commit): Simplify chatter.

2005-02-21  Nathaniel Smith  <njs@codesourcery.com>

	* file_io.cc (get_homedir): Check more environment variables in
	Win32 version.

2005-02-21  Nathaniel Smith  <njs@codesourcery.com>

	* file_io.cc: Remove tabs.

2005-02-21  Nathaniel Smith  <njs@codesourcery.com>

	* smap.hh (smap): Remove leading underscores, add comments.

2005-02-20  Nathaniel Smith  <njs@codesourcery.com>

	* std_hooks.lua (merge2, merge3): Check for DISPLAY before
	invoking gvim.

2005-02-20  Julio M. Merino Vidal  <jmmv@menta.net>

	* ChangeLog: Use tabs for indentation rather than spaces.  Drop
	trailing whitespace.  While here, fix a date by adding zeros before
	the month and the day number.

2005-02-20  Julio M. Merino Vidal  <jmmv@menta.net>

	* gettext.h: Add file.
	* AUTHORS: Mention that it comes from the GNU Gettext package.
	* Makefile.am: Distribute it.
	* sanity.hh: Use gettext.h rather than libintl.h so that --disable-nls
	works.  Also improves portability, according to the GNU Gettext
	manual.

2005-02-19  Derek Scherger  <derek@echologic.com>

	* automate.cc (automate_heads): remove bogus call to 
	app.allow_working_copy() which is called in cpp_main
	* database.cc (check_sqlite_format_version): don't check database
	version when "file" is really a directory; add filename to error
	message